@@ -30,4 +30,5 @@
   <attr path="/api/namespace/interface[@cname='GAppInfo']/method[@name='All']/return-type" name="elements_owned">true</attr>
   <attr path="/api/namespace/object[@cname='GThemedIcon']/method[@name='GetNames']/return-type" name="null_term_array">1</attr> 
   <attr path="/api/namespace/interface[@cname='GSeekable']/method[@cname='g_seekable_can_seek']" name="name">GetCanSeek</attr>
+  <attr path="/api/namespace/interface[@cname='GSeekable']/method[@cname='g_seekable_tell']" name="name">GetPosition</attr>
 </metadata>
